AddBooks Button height bug on mobile removed

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ button:hover{
     color: var(--cornsilk);
     border: 1px solid var(--buttons-background);
     width: minmax(30%, auto);
+    height:  2rem;
     opacity: 0.6;
     margin: 1em;
 }
